--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Mi primera Página</title>
+<title>Adrian Zavaleta en Zavcorp.github.io</title>
 </head>
 <body>
 
 <h1>My First Heading</h1>
-<p>Probando código</p>
+<p>Probando código ejemplo pagina en github pages</p>
 
 </body>
 </html>
