--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Adrian Zavaleta en Zavcorp.github.io</title>
+<title>Zavcorp.github.io</title>
 </head>
 <body>
 
-<h1>My First Heading</h1>
+<h1>Adrian Zavaleta en Zavcorp.github.io</h1>
 <p>Probando código ejemplo pagina en github pages</p>
 
 </body>
